<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/accountDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_description" />

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:ems="10"
                android:hint="@string/account_name_hint"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/registerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_address_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_phone_hint"
                android:inputType="phone" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registerPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_password2_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_register_button" />

            <Button
                android:id="@+id/registerBackButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_register_back_button" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>