<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_name_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_address_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_phone_hint"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_password2_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/editButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_edit_button" />

            <Button
                android:id="@+id/editBackButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_register_back_button" />

            <Button
                android:id="@+id/deleteUserButton"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_delete_button" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>