<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/current_account_name" />

            <Button
                android:id="@+id/accountLogInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_login_button" />

            <Button
                android:id="@+id/accountRegisterButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_register_button" />

            <Button
                android:id="@+id/accountEditButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/account_edit_button" />

            <Button
                android:id="@+id/logOutButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/account_logout_button"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>