<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/createAdvertName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/advert_text_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/createAdvertDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/advert_text_description"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addPictureAdvertButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:text="@string/advert_button_add_picture" />

                <Button
                    android:id="@+id/takePictureAdvertButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:text="@string/advert_button_take_picture" />
            </LinearLayout>

            <ImageView
                android:id="@+id/createAdvertImageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="#C5F1DF"
                android:contentDescription="@string/advert_button_add_picture"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/createAdvertButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:text="@string/advert_button_create" />

                <Button
                    android:id="@+id/cancelAdvertButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:text="@string/advert_button_cancel"
                    android:textColorLink="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>